# Geant4_Zinc68_Flat_Detector

Geant4_Zinc68_Flat_Detector/: .cproject  .project  50kVp.mac  CMakeCache.txt  CMakeLists.txt  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A0  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A1  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A10  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A11  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A12  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A13  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A14  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A15  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A16  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A17  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A18  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A19  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A2  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A3  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A4  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A5  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A6  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A7  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A8  Gamma_511keV_20177151_15%3A47%3A15_RankNum%3A9  Makefile  README.txt  Yield_Validation  Yield_Validation.cc  beam.mac  cmake_install.cmake  run.mac  test.mac  vis.mac
Geant4_Zinc68_Flat_Detector/include/: DetectorConstruction.hh  MpiManagerWJ.hh  RunAction.hh  SensitiveDetector.hh  SensitiveDetector_add.hh
Geant4_Zinc68_Flat_Detector/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstruction_orgin  MpiManagerWJ.cc  RunAction.cc  SensitiveDetector.cc  SensitiveDetector_add.cc  SensitiveDetector_add.origin
